[tool.poetry]
name = "doc-pipe"
version = "0.1.0"
description = ""
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cattidea/doc-pipe"
repository = "https://github.com/cattidea/doc-pipe"
keywords = []
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.1"
isort = "^5.10.1"
tomli = { version = "^2.0.1", python = "<3.11" }
pyright = "^1.1.273"
pytest-rerunfailures = "^10.2"
ruff = "^0.0.103"

[tool.poetry.scripts]
doc-pipe = "doc_pipe.__main__:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]
skip = ["setup.py", ".venv"]

[tool.pyright]
include = ["yutto", "tests"]
pythonVersion = "3.9"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
extend-ignore = [
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
